--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,7 @@ jobs:
         submodules: recursive
         fetch-depth: 0
 
-    # FIX: Use Python 3.11 explicitly to fix 'distutils' error on macOS/Linux
+    # FIX 1: Force Python 3.11 on all OSs (fixes macOS 'distutils' error)
     - name: Setup Python 3.11
       uses: actions/setup-python@v5
       with:
@@ -40,41 +40,43 @@ jobs:
         cache: 'npm'
         cache-dependency-path: '**/package-lock.json'
 
-    # FIX: Correct package names for Ubuntu 24.04
+    # FIX 2: Install correct Linux libraries for Ubuntu 24.04
     - name: Install Linux Dependencies
       if: runner.os == 'Linux'
       run: |
         sudo apt-get update
         sudo apt-get install -y build-essential libx11-dev libxkbfile-dev libsecret-1-dev libkrb5-dev libgtk-3-dev libxss-dev libasound2-dev
 
-    # FIX: Setup global node-gyp to handle newer Node versions
-    - name: Update Build Tools
-      shell: bash
-      run: |
-        npm install -g node-gyp
-        # Tell npm to use the Python 3.11 we installed earlier
-        echo "PYTHON=python" >> $GITHUB_ENV
-        echo "npm_config_python=python" >> $GITHUB_ENV
-
     - name: Clean npm cache
       shell: bash
       run: npm cache clean --force
 
-    - name: Install Dependencies
+    - name: Configure and Install Dependencies
       shell: bash
       env:
+        # FIX 3: Pass Token to allow ripgrep download on macOS (Fixes 403 Forbidden)
         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        PYTHON: python
       run: |
-        # --no-audit prevents breaking changes
-        # Removed --ignore-scripts so native modules compile
+        echo "🔧 Applying version overrides..."
+        
+        # FIX 4: THE CRITICAL FIX FOR WINDOWS AND LINUX
+        # Force node-addon-api to v7.1.0. 
+        # v8.0.0+ crashes Electron 27 builds with 'node_api_nogc_env' errors.
+        npm pkg set overrides.node-addon-api="7.1.0"
+        
+        echo "📦 Installing dependencies..."
+        # We run install AFTER setting the override so it downloads the working version
         npm install --no-fund --no-audit
 
     - name: Ensure Electron Builder Config
       shell: bash
       run: |
+        # Only create if completely missing
         if [ ! -f "electron-builder.config.js" ] && [ ! -f "electron-builder.config.cjs" ] && [ ! -f ".electron-builder.config.js" ] && [ ! -f ".electron-builder.config.cjs" ]; then
           echo "No config found. Creating default electron-builder.config.cjs..."
-          # Added identity: null for mac to skip signing errors
+          # FIX 5: Added 'identity: null' for macOS to prevent code signing errors
           echo 'module.exports = {
             productName: "Prism Editor",
             appId: "com.prism-editor.app",
@@ -84,8 +86,6 @@ jobs:
             mac: { target: "dmg", identity: null }, 
             linux: { target: "AppImage" }
           };' > electron-builder.config.cjs
-        else
-           echo "Config file already exists. Skipping creation."
         fi
 
     - name: Compile Project
@@ -94,11 +94,11 @@ jobs:
         NODE_OPTIONS: --max-old-space-size=8192
       run: |
         if npm run compile --if-present; then
-          echo "Compile successful"
+          echo "✅ Compile successful"
         elif npm run build --if-present; then
-          echo "Build successful"
+          echo "✅ Build successful"
         else
-          echo "No compile/build script found, proceeding..."
+          echo "⚠️ No compile/build script found, proceeding..."
         fi
 
     - name: Package Application
@@ -107,14 +107,14 @@ jobs:
         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         USE_HARD_LINKS: false
       run: |
-        # Set flags based on OS
+        # Select Flag based on OS
         if [ "$RUNNER_OS" = "Windows" ]; then FLAGS="--win"; fi
         if [ "$RUNNER_OS" = "macOS" ]; then FLAGS="--mac"; fi
         if [ "$RUNNER_OS" = "Linux" ]; then FLAGS="--linux"; fi
 
-        echo "Packaging for $RUNNER_OS with flags: $FLAGS"
+        echo "🚀 Packaging for $RUNNER_OS..."
 
-        # Explicitly use npx electron-builder
+        # Use explicit config if we created one to avoid confusion
         if [ -f "electron-builder.config.cjs" ]; then
            npx electron-builder build $FLAGS --config electron-builder.config.cjs
         else
